<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HAW Menu</string>
    <string name="haw_mensa">HAW Mensa</string>
    <string name="haw_cafe">HAW Cafe</string>
    <string name="add_photo">Add photo</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="item">Item</string>
    <string name="app_feedback">App Feedback</string>
    <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="please_wait">Please wait</string>
    <string name="send">Send</string>
    <string-array name="spinner_list">
        <item>Select...</item>
        <item>HAW Mensa</item>
        <item>HAW Cafe</item>
        <item>Other</item>
    </string-array>
    <string name="about_message">Developer : msvyrydovych@gmail.com  Icons : https://icons8.com</string>
    <string name="please_leave_your_comments_and_suggestions_related_to_the_app_here">Please leave your comments and suggestions related to the app here:</string>
    <string name="load_error">Cannot load the menu</string>
    <string name="error">Error</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="no_menu_msg">There is no menu available for today. Check next open day…</string>
</resources>
