<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="saveourcar.soc.MainActivity"
    >

    <item android:title="@string/language" >
        <menu>
            <item
                android:id="@+id/enBtn"
                android:icon="@drawable/us"
                android:title="@string/english"
                app:showAsAction="never"

                />
            <item
                android:id="@+id/deBtn"
                android:icon="@drawable/de"
                android:title="@string/german"
                app:showAsAction="never"
                />
        </menu>
    </item>
        <item
            android:id="@+id/uploadPhoto"
            android:icon="@drawable/cam"
            android:title="@string/add_photo"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/feedback"
        android:title="@string/app_feedback"
        />
    <item
        android:id="@+id/menu_info"
        android:title="@string/about" />

</menu>